libosmscout/parser/OST/OST.atg
#include <osmscout/TypeConfig.h>

#include <osmscout/util/String.h>

COMPILER OST

std::string Destring(const char* str)
{
  std::string result(str);

  if (result.length()>=2 &&
      result[0]=='"' &&
      result[result.length()-1]=='"') {
    result=result.substr(1,result.length()-2);
  }

  return result;
}

CHARACTERS
  letter     = 'a'..'z' + 'A'..'Z'.
  digit      = '0'..'9'.
  eol        = '\n'.
  stringchar = ANY - '"'.
  quotchar   = ANY.

TOKENS
  ident      = letter {letter | digit | '_'}.
  number     = digit {digit}.
  string     = '"' {stringchar | '\\' quotchar} '"'.

COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO eol

IGNORE '\t' + '\r' + '\n'

PRODUCTIONS
  OST         = SYNC "OST"
                [GRADES]
                [TYPES]
                [TAGS]
                "END"
                .

  GRADES      = SYNC "GRADES"
                GRADE {GRADE}
                .

  GRADE       = (.
                  size_t grade;
                .)
                SYNC "SURFACE" "GRADE"
                UINT<grade>
                "{"
                 {
                   (.
                     std::string surface;
                   .)

                   STRING<surface>
                   (.
                     if (grade>=1 && grade<=5) {
                       config.RegisterSurfaceToGradeMapping(surface,
                                                            grade);
                     }
                     else {
                       std::string e="Not a valid grade level: "+NumberToString(grade);

                       SemErr(e.c_str());
                     }
                   .)
                 }
                "}"
                .

  TYPES       = SYNC "TYPES"
                TYPE {TYPE}
                .

  TYPE        = (.
                  std::string   name;
                  TagCondition  *condition=NULL;
                  TypeInfo      typeInfo;
                  unsigned char types;
                .)
                SYNC "TYPE"
                IDENT<name>                       (. typeInfo.SetType(name); .)

                "="
                TYPEKINDS<types>
                "(" TAGCONDITION<condition> ")"   (. typeInfo.AddCondition(types,condition); .)

                {
                  "OR"
                  TYPEKINDS<types>
                  "(" TAGCONDITION<condition> ")" (. typeInfo.AddCondition(types,condition); .)
                }

                [
                  "OPTIONS"
                  TYPEOPTIONS<typeInfo>
                ]

                (.
                  config.AddTypeInfo(typeInfo);
                .)
                .

  TAGS        = SYNC "TAGS" TAG {TAG}.
  TAG         = SYNC "TAG"
                string
                (.
                   std::string tagName=Destring(t->val);

                   if (tagName.empty()) {
                     std::string e="Empty tags are not allowed";

                     SemErr(e.c_str());
                   }
                   else {
                     config.RegisterTagForExternalUse(tagName);
                   }
                .)
                .

  TAGCONDITION<TagCondition*& condition>
              = (.
                  std::list<TagCondition*> conditions;
                  TagCondition             *subCond;
                .)
                TAGANDCOND<subCond>   (. conditions.push_back(subCond); .)
                {
                  "OR"
                  TAGANDCOND<subCond> (. conditions.push_back(subCond); .)
                }
                (.
                  if (conditions.size()==1) {
                    condition=conditions.front();
                  }
                  else {
                    TagBoolCondition *orCondition=new TagBoolCondition(TagBoolCondition::boolOr);

                    for (std::list<TagCondition*>::const_iterator c=conditions.begin();
                         c!=conditions.end();
                         ++c) {
                      orCondition->AddCondition(*c);
                    }

                    condition=orCondition;
                  }
                .)
                .
  TAGANDCOND<TagCondition*& condition>
              = (.
                  std::list<TagCondition*> conditions;
                  TagCondition             *subCond;
                .)
                TAGBOOLCOND<subCond>     (. conditions.push_back(subCond); .)
                {
                  "AND"
                  TAGBOOLCOND<subCond>   (. conditions.push_back(subCond); .)
                }
                (.
                  if (conditions.size()==1) {
                    condition=conditions.front();
                  }
                  else {
                    TagBoolCondition *andCondition=new TagBoolCondition(TagBoolCondition::boolAnd);

                    for (std::list<TagCondition*>::const_iterator c=conditions.begin();
                         c!=conditions.end();
                         ++c) {
                      andCondition->AddCondition(*c);
                    }

                    condition=andCondition;
                  }
                .)
                .
  TAGBOOLCOND<TagCondition*& condition>
              =   TAGBINCOND<condition>
                | TAGEXISTSCOND<condition>
                | "(" TAGCONDITION<condition> ")"
                | "!" TAGBOOLCOND<condition> (. condition=new TagNotCondition(condition); .)
                .

  TAGBINCOND<TagCondition*& condition>
              = (.
                  std::string nameValue;
                .)
                string (. nameValue=Destring(t->val); .)
                (
                  TAGEQUALSCOND<nameValue,condition>
                | TAGNOTEQUALSCOND<nameValue,condition>
                | TAGISINCOND<nameValue,condition>
                )
                .

  TAGEQUALSCOND<const std::string& tagName,TagCondition*& condition>
              = (.
                  std::string valueValue;
                .)
                "=="
                string (. valueValue=Destring(t->val); .)
                (.
                  TagId tagId=config.RegisterTagForInternalUse(tagName);

                  condition=new TagBinaryCondition(tagId,operatorEqual,valueValue);
                .)
                .
  TAGNOTEQUALSCOND<const std::string& tagName,TagCondition*& condition>
              = (.
                  std::string valueValue;
                .)
                "!="
                string (. valueValue=Destring(t->val); .)
                (.
                  TagId tagId=config.RegisterTagForInternalUse(tagName);

                  condition=new TagBinaryCondition(tagId,operatorNotEqual,valueValue);
                .)
                .
  TAGISINCOND<const std::string& tagName,TagCondition*& condition>
              = (.
                 std::list<std::string> values;
                .)
                "IN"
                "["
                string   (. values.push_back(Destring(t->val)); .)
                {
                  ","
                  string (. values.push_back(Destring(t->val)); .)
                }
                "]"
                (.
                  TagId tagId=config.RegisterTagForInternalUse(tagName);

                  if (values.size()==1) {
                    condition=new TagBinaryCondition(tagId,operatorEqual,values.front());
                  }
                  else {
                    TagIsInCondition *isInCondition=new TagIsInCondition(tagId);

                    for (std::list<std::string>::const_iterator s=values.begin();
                         s!=values.end();
                         ++s) {
                      isInCondition->AddTagValue(*s);
                    }

                    condition=isInCondition;
                  }
                .)
                .
  TAGEXISTSCOND<TagCondition*& condition>
              = "EXISTS"
                 string
                 (.
                   condition=new TagExistsCondition(config.RegisterTagForInternalUse(Destring(t->val)));
                 .)
                 .

  TYPEKINDS<unsigned char& types>
              = (.
                  types=0;
                .)

                TYPEKIND<types>

                {
                  [
                    ","
                  ]
                  TYPEKIND<types>
                }
                .

  TYPEKIND<unsigned char& types>
              =  "NODE"      (. types|=TypeInfo::typeNode; .)
               | "WAY"       (. types|=TypeInfo::typeWay; .)
               | "AREA"      (. types|=TypeInfo::typeArea; .)
               | "RELATION"  (. types|=TypeInfo::typeRelation; .)
               .

  TYPEOPTIONS<TypeInfo& typeInfo>
              = TYPEOPTION<typeInfo>
                {
                  TYPEOPTION<typeInfo>
                }
              .

  TYPEOPTION<TypeInfo& typeInfo>
              =  ROUTE<typeInfo>
               | "INDEX_LOC"         (. typeInfo.SetIndexAsLocation(true); .)
               | "INDEX_REGION"      (. typeInfo.SetIndexAsRegion(true); .)
               | "INDEX_POI"         (. typeInfo.SetIndexAsPOI(true); .)
               | "FIND_CITY"         (. typeInfo.SetFindCity(true); .)
               | "FIND_STREET"       (. typeInfo.SetFindStreet(true); .)
               | "CONSUME_CHILDREN"  (. typeInfo.SetConsumeChildren(true); .)
               | "OPTIMIZE_LOW_ZOOM" (. typeInfo.SetOptimizeLowZoom(true); .)
               | "IGNORE"            (. typeInfo.SetIgnore(true); .)
               | "MULTIPOLYGON"      (. typeInfo.SetMultipolygon(true); .)
               | "PIN_WAY"           (. typeInfo.SetPinWay(true); .)
               | "IGNORESEALAND"     (. typeInfo.SetIgnoreSeaLand(true); .)
               .

  ROUTE<TypeInfo& typeInfo>
              = "ROUTE"
                "["
                   [
                     "FOOT"
                     (.
                       typeInfo.CanRouteFoot(true);
                     .)
                   ]

                   [
                     "BICYCLE"
                     (.
                       typeInfo.CanRouteBicycle(true);
                     .)
                   ]

                   [
                     "CAR"
                     (.
                       typeInfo.CanRouteCar(true);
                     .)
                   ]
                "]"
                .

  IDENT<std::string& value>
              = ident
                (.
                  value=t->val;
                .)
                .

  STRING<std::string& value>
              = string
                (.
                  value=Destring(t->val);
                .)
                .

  UINT<size_t& value>
              = number
                (.
                  if (!StringToNumber(t->val,value)) {
                    std::string e="Cannot parse number '"+std::string(t->val)+"'";

                    SemErr(e.c_str());
                  }
                .)
                .
END OST.
